--- a/package.json
+++ b/package.json
@@ -8,5 +8,19 @@
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "Apache Cordova Team",
-    "license": "Apache-2.0"
+    "license": "Apache-2.0",
+    "dependencies": {
+        "cordova-plugin-jshybugger": "git+https://github.com/jsHybugger/cordova-plugin-jshybugger.git"
+    },
+    "cordova": {
+        "plugins": {
+            "org.jshybugger.cordova": {
+                "CAMERA_USAGE_DESCRIPTION": " ",
+                "PHOTOLIBRARY_USAGE_DESCRIPTION": " ",
+                "CONTACTS_USAGE_DESCRIPTION": " ",
+                "GEOLOCATION_USAGE_DESCRIPTION": " ",
+                "MICROPHONE_USAGE_DESCRIPTION": " "
+            }
+        }
+    }
 }
